# contract_automation

./: .gitignore  README.md  config.py  langgraph.json  langgraph.yaml   nodes.ipynb  package.json  pyproject.toml  setup.py  todos.md
src/: __init__.py  ai_functions.py  config.py  document_processing.py  graph.py  main.ipynb  main.py  models.py  nodes.ipynb  nodes.py  nodes2.ipynb  openai_client.py  prompts.py  role_options.py  template_manager.py  utils.py  validators.py
src/chatbot/: assistant.py  assistant2.py  client.py  models.py  openai_client.py  simple_run.py  test_chat.py
src/chatbot/openai_assistant/: assistant.py  client.py
src/contract_automation/: __init__.py  graphs.py  main.py  nodes.py  state.py  test_extract_text.py  utils.py
src/legalsearch/: agent_legal_search.py
src/output_contracts/: airbnb_20241022_155455.txt  it_20241022_155642.txt  vanzare-cumparare_20241022_155210.txt  vanzare-cumparare_20241022_155330.txt
src/templates/: airbnb.txt  buy-sell.agreement.txt  buy-sell.txt  it.consulting.txt  sales_contract_template.txt
